--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "com.unity.2d.pixel-perfect": "4.0.1",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "5.1.4",
+    "com.unity.2d.spriteshape": "5.1.7",
+    "com.unity.device-simulator": "3.0.3-preview",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.postprocessing": "3.1.1",
+    "com.unity.recorder": "2.5.7",
     "com.unity.test-framework": "1.1.29",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
