--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,7 +4,7 @@
     "com.neuecc.unirx": "https://github.com/neuecc/UniRx.git?path=/Assets/Plugins/UniRx/Scripts",
     "com.unity.2d.pixel-perfect": "5.0.3",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "9.0.2",
+    "com.unity.feature.2d": "1.0.0",
     "com.unity.ide.rider": "3.0.24",
     "com.unity.postprocessing": "3.2.2",
     "com.unity.recorder": "4.0.1",
