--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,11 +7,11 @@
     "com.unity.feature.2d": "2.0.1",
     "com.unity.ide.rider": "3.0.31",
     "com.unity.postprocessing": "3.4.0",
-    "com.unity.recorder": "4.0.3",
-    "com.unity.test-framework": "1.1.33",
-    "com.unity.textmeshpro": "3.0.9",
-    "com.unity.timeline": "1.7.6",
-    "com.unity.ugui": "1.0.0",
+    "com.unity.recorder": "5.0.0",
+    "com.unity.test-framework": "1.3.9",
+    "com.unity.timeline": "1.8.7",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
